Send the dates a document declares, and stop reporting faults that are not faults (#298)
* See faults as they happen, and trust what the tool says it read

An audit of the v2 branch found a set of places where RESTest said something
that was not true: about a document it had read, about a reply it had judged,
or about what it was doing while a run was under way. Each is corrected here,
with a test that fails without the correction.

Reporting

- Faults now reach the terminal as they are found. The console report wrote
  through a buffer that empties only on a whole line written one particular
  way, which this report does not use, so a fault sat unseen until several
  thousand characters of later faults pushed it out or the run ended. Watching
  a run showed nothing for a minute and then everything at once.
- A reply RESTest cannot check is no longer reported as a fault. Whether a body
  is JSON is now decided by our own reader before the validator is asked
  anything; previously every exception out of the validator was announced as
  "the body is not JSON at all", so a shape the validator could not handle
  became a fault against an API that had answered perfectly.
- A rule that throws now costs its own judgement and nothing else. It used to
  end the loop, so every rule after it never saw that attempt, and a reply
  judged by half the rules read exactly like one that passed them all. The
  failure is counted and still makes the run answer 4.
- report.json keeps its keys in one order. Three objects were built with
  Map.of, whose order is decided afresh per process, so two runs of the same
  command produced reports that differed where nothing had differed.

Reading a document

- A schema declaring properties but no type is read as an object. It used to
  become "any value at all", discarding the properties, so the tool offered a
  number where the document described an object with named fields.
- Declared defaults and enum members survive being read. A date arrive